[project]
name = "rag-assignment"
version = "0.1.0"
description = "RAG Assignment Project by SmartDataSolutionsLLC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastembed>=0.7.4",
    "hf-xet>=1.2.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic-settings>=2.12.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "tomli>=2.4.0",
    "unstructured[pdf]>=0.18.27",
]
